--- a/wia.html
+++ b/wia.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <script type="text/javascript" src="lib/jquery-2.1.1.min.js"></script>
     <script type="text/javascript" src="imagescale.js"></script>
     <script type="text/javascript" src="huetonechart.js"></script>
