--- a/wia.html
+++ b/wia.html
@@ -3,6 +3,8 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <script type="text/javascript" src="lib/jquery-2.1.1.min.js"></script>
+    <script type="text/javascript" src="colorsystem.js"></script>
+    <script type="text/javascript" src="colorutils.js"></script>
     <script type="text/javascript" src="imagescale.js"></script>
     <script type="text/javascript" src="huetonechart.js"></script>
     <script type="text/javascript" src="csv.js"></script>
